@@ -111,3 +111,6 @@ In the struct canmsg_tag I have changed the CAN_data[16] in CAN_data[8]. I do no
 
 2010-11-May  Francesco Nori <iron@liralab.it>
 * Current build 33. I2T removed for 0x0119 (wrist control board)
+
+2010-27-Jul  Marco Randazzo <marco.randazzo@iit.it>
+* Current build 34. control_mode[] is now broadcasted every time a change in modality is detected. see void can_send_broadcast(void)
